Fixed alignment issue on user page

--- a/css/userpage.css
+++ b/css/userpage.css
@@ -1,111 +1,79 @@
-head, body {
+body {
     font-family: 'Open Sans', Arial, sans-serif;
-    color: #000;
+    font-size: 0;
 }
 
-.navbar-header {
-    height: 50px;
+body:last-child {
+    margin-bottom: 20px;
 }
 
-@media (min-width: 1242px) {
-    .container {
-        margin-top: 50px;
-    }
-
-    #user-image {
-        margin-left: 396px;
-    }
-}
-
-@media (min-width: 1201px) and (max-width: 1241px) {
-    .container {
-        margin-top: 100px;
-    }
-
-    #user-image {
-        margin-left: 396px;
-    }
-}
-
-@media (min-width: 801px) and (max-width: 1200px) {
-    .container {
-        margin-top: 100px;
-    }
-
-    #user-image {
-        margin-left: 210px;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 800px) {
-    .container {
-        margin-top: 150px;
-    }
-
-    #user-image {
-        margin-left: 26px;
-    }
-}
-
-@media (max-width: 767px) {
-    .container {
-        margin-top: 50px;
-    }
-
-    #user-image {
-        margin-left: 26px;
-    }
+.container {
+    padding: 0;
 }
 
 #user-page {
     display: block;
-    width: 100%;
-    margin-top: -10px;
     font-size: 20px;
-    padding: 1px 40px 20px 20px;
+    margin-top: 50px;
+}
+
+@media (min-width: 801px) and (max-width: 1241px) {
+    #user-page {
+        margin-top: 100px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 800px) {
+    #user-page {
+        margin-top: 150px;
+    }
 }
 
 #user-image {
     width: 200px;
+    margin: auto;
 }
 
-#user-page h1, h2 {
+#user-image * {
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+}
+
+.container h1, h2 {
+    margin: 0;
     font-weight: bold;
 }
 
-#user-page h1 {
+.container h1 {
     text-align: center;
+    margin-bottom: 30px;
 }
 
-#user-info, #about-me {
+.container h2 {
+    margin: 30px 0 0 0;
+}
+
+.user-section {
     color: #fff;
     background-color: #bd3947;
-    width: 112.5%;
+    width: 100%;
 }
 
-#user-info {
-    padding-top: 20px;
-    padding-left: 10px;
-    padding-bottom: 10px;
-    padding-right: 20px;
+.user-section {
+    margin-top: 20px;
+    padding: 20px 30px;
 }
 
-#user-info ul {
+.user-section ul,
+.user-section p {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
-.img-responsive {
-    vertical-align: middle;
-    border-radius: 50%;
-    margin-right: 10px;
-    margin-left: 10px;
-}
-
-#about-me {
-    padding-right: 50px;
-    padding-left: 50px;
-    padding-top: 30px;
-    padding-bottom: 30px;
+#change {
+    margin-top: 20px;
 }
 
 .btn-lg, .btn-lg:focus {
